# attentionMech

./: README.md  pyproject.toml  survial_model_discrete_time.py  survival_model_employee_attrition.py
data/: child_raw.csv
